fix footer on mobile

--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -2,3 +2,7 @@ html {
   min-height: 100%;
   position: relative;
 }
+
+.Layout {
+  padding-bottom: 60px;
+}
